Fix keyword text clipping on keys in K mode

--- a/src/js/css/keyboard-window.css
+++ b/src/js/css/keyboard-window.css
@@ -500,6 +500,8 @@ html[data-theme="light"] .kbd-sym-char {
 .kbd-container[data-shift-mode="keyword-caps"] .kbd-keyword {
   opacity: 1;
   font-size: 16px;
+  line-height: 1.2;
+  overflow: visible;
   position: absolute;
   top: 50%;
   left: 50%;
